--- a/css/stilo.css
+++ b/css/stilo.css
@@ -3,20 +3,50 @@ html{
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
+
 .encabezado {
+    max-width: 100%;
+    width: 96vw;
+    height: 50px;
+    background-color: rgb(255, 255, 255. 0.2);
+    backdrop-filter: blur(10px);
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     display: inline-flex;
-    color: rgb(255, 255, 255);
+    justify-content: space-between;
+    align-items: center;
     text-align: center;
-    padding: 20px;
+    padding-left: 15px;
+    position: sticky;
+    top: 0px;
+}
+
+.titulo {
+    padding-left: 25px;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    img {
+        max-width: 100%;
+        width: 150px;
+        height: auto;
+    }
 }
 
 h1 {
     color: rgb(18, 63, 21);
+    margin: 0px;
     font-size: 55px;
     font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    align-items: center;
+    margin: opx;
 }
 
 body {
+    width: 100%;
     background: url(../imagenes/fondo1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -25,9 +55,18 @@ body {
     color: rgb(58, 90, 64);
 }
 
+main {
+    width: 100%;
+    margin-left: 25px;
+}
+
+p {
+    width: 100%;
+}
 .barra-principal {
     color: rgb(58, 90, 64);
-    font-size: 20px;
+    justify-content: center; 
+    align-items: center; 
     ul {
         display: flex;
         align-items: center;
@@ -52,6 +91,7 @@ body {
 }
 
 h2 {
+    margin: 0px;
     color: rgb(58, 90, 64);
     a {
         color: rgb(58, 90, 64);
@@ -60,11 +100,14 @@ h2 {
     a:hover {
         color: rgb(38, 51, 39);
         text-decoration: underline;
+        font-size: 34px;
+
     }
 }
 
 h3 {
     color: rgb(58, 90, 64);
+    margin: 0px;
     a {
         color: rgb(255, 255, 255);
         text-decoration: none;
@@ -80,25 +123,62 @@ video {
     height: auto;
 }
 
+.contenedor-productos {
+    max-width: 100%;
+    width: 96vw;
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    
+}
+
 .barra-secundaria {
-    color: rgb(58, 90, 64);
+    max-height: 100%;
+    height: 100;
+    margin: 10px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     ul {
-        a {
-            color: rgb(18, 63, 21);
-            text-decoration: none; 
-        }
-        a:hover {
-            color: rgb(13, 26, 14);
-            text-decoration: underline;
-            font-size: 25px;
-            transition: transform 0.8s ease;
-        }
+        align-items: flex-start;
+        justify-self: flex-start;
+        list-style: none;
+        padding: 5px;
+        margin: 5px;
     }
+    a {
+        color: rgb(13, 26, 14);
+        text-decoration: none;
+    }
+    a:hover {
+        color: rgb(13, 26, 14);
+        text-decoration: underline;
+        font-size: 25px;
+        transition: transform 0.8s ease;
+    }
+    
+}
+
+.materiales {
+    max-width: 100%;
+    width: 96vw;
+    display: inline;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    margin: 10px;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding-left: 10px;
+    padding-top: 8px;
 }
 
 .materiales img {
-  width: 180px;
-  height: 180px;
+    max-width: 100%;
+    width: 180px;
+    height: 180px;
+    border-radius: 20px;
+    margin-left: 20px;
 }
 
 .materiales img:hover {
@@ -117,4 +197,8 @@ footer {
         color: rgb(165, 214, 167);
         text-decoration: underline;
     }
+}
+
+.pie-pagina {
+    margin-left: 25px;
 }
