--- a/css/stilo.css
+++ b/css/stilo.css
@@ -5,7 +5,7 @@ html{
 
 
 .encabezado {
-    max-width: 100%;
+    max-width: 100;
     width: 96vw;
     height: 50px;
     background-color: rgb(255, 255, 255. 0.2);
