--- a/css/stilo.css
+++ b/css/stilo.css
@@ -5,35 +5,40 @@ html{
 
 
 .encabezado {
-    max-width: 100;
-    width: 96vw;
+    max-width: 1200px;
+    width: 99%;
     height: 50px;
-    background-color: rgb(255, 255, 255. 0.2);
+    background-color: rgba(255, 255, 255. 0.2);
     backdrop-filter: blur(10px);
+    box-sizing: border-box;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-    display: inline-flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    text-align: center;
-    padding-left: 15px;
-    position: sticky;
-    top: 0px;
+    padding : 10px 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
 }
 
 .titulo {
-    padding-left: 25px;
+    padding: 10px 10px;
+    max-width: 1200px;
     width: 100%;
     height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    img {
-        max-width: 100%;
-        width: 150px;
-        height: auto;
-    }
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
 }
+.titulo img {
+    max-width: 100%;
+    width: 150px;
+    height: auto;
+}
+
 
 h1 {
     color: rgb(18, 63, 21);
@@ -46,77 +51,81 @@ h1 {
 }
 
 body {
-    width: 100%;
+    width: 98%;
+    max-width: 1200px;
     background: url(../imagenes/fondo1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
+    padding-top: 55px;
     color: rgb(58, 90, 64);
 }
 
 main {
     width: 100%;
     margin-left: 25px;
+    padding-top: 15px;
 }
 
 p {
     width: 100%;
 }
+
 .barra-principal {
     color: rgb(58, 90, 64);
     justify-content: center; 
-    align-items: center; 
-    ul {
-        display: flex;
-        align-items: center;
-        list-style: none;
+    align-items: center;
+}
+.barra-principal ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
 
-    }
-    a {
-        font-size: 20px;
-        color: rgb(18, 63, 21);
-        text-decoration: none; 
-    }
-    a:hover {
-        color: rgb(13, 26, 14);
-        text-decoration: underline;
-        font-size: 25px;
-        transition: transform 0.8s ease;
-    }
-    li {
-        display: inline-block;
-        padding: 10px;
-    }
+}
+.barra-principal a {
+    font-size: 20px;
+    color: rgb(18, 63, 21);
+    text-decoration: none; 
+}
+.barra-principal a:hover {
+    color: rgb(13, 26, 14);
+    text-decoration: underline;
+    font-size: 25px;
+    transition: transform 0.8s ease;
+}
+.barra-principal li {
+    display: inline-block;
+    padding: 10px;
 }
 
 h2 {
     margin: 0px;
     color: rgb(58, 90, 64);
-    a {
-        color: rgb(58, 90, 64);
-        text-decoration: none;
-    }
-    a:hover {
-        color: rgb(38, 51, 39);
-        text-decoration: underline;
-        font-size: 34px;
-
-    }
+}
+h2 a {
+    color: rgb(58, 90, 64);
+    text-decoration: none;
+}
+h2 a:hover {
+    color: rgb(38, 51, 39);
+    text-decoration: underline;
+    font-size: 34px;
 }
 
 h3 {
     color: rgb(58, 90, 64);
     margin: 0px;
-    a {
-        color: rgb(255, 255, 255);
-        text-decoration: none;
-    }
-    a:hover {
-        color: rgb(38, 51, 39);
-        text-decoration: underline;
-    }
 }
+h3 a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+h3 a:hover {
+    color: rgb(38, 51, 39);
+    text-decoration: underline;
+}
+
 
 video {
     width:80%;
@@ -124,12 +133,11 @@ video {
 }
 
 .contenedor-productos {
-    max-width: 100%;
-    width: 96vw;
+    max-width: 1200px;
+    width: 98%;
     display: inline-flex;
     justify-content: flex-start;
     align-items: flex-start;
-    
 }
 
 .barra-secundaria {
@@ -139,29 +147,28 @@ video {
     justify-content: flex-start;
     align-items: flex-start;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
-    ul {
-        align-items: flex-start;
-        justify-self: flex-start;
-        list-style: none;
-        padding: 5px;
-        margin: 5px;
-    }
-    a {
-        color: rgb(13, 26, 14);
-        text-decoration: none;
-    }
-    a:hover {
-        color: rgb(13, 26, 14);
-        text-decoration: underline;
-        font-size: 25px;
-        transition: transform 0.8s ease;
-    }
-    
+}
+.barra-secundaria ul {
+    align-items: flex-start;
+    justify-self: flex-start;
+    list-style: none;
+    padding: 5px;
+    margin: 5px;
+}
+.barra-secundaria a {
+    color: rgb(13, 26, 14);
+    text-decoration: none;
+}
+.barra-secundaria a:hover {
+    color: rgb(13, 26, 14);
+    text-decoration: underline;
+    font-size: 25px;
+    transition: transform 0.8s ease;
 }
 
 .materiales {
-    max-width: 100%;
-    width: 96vw;
+    max-width: 1200px;
+    width: 98%;
     display: inline;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
     margin: 10px;
@@ -179,6 +186,7 @@ video {
     height: 180px;
     border-radius: 20px;
     margin-left: 20px;
+
 }
 
 .materiales img:hover {
@@ -187,16 +195,21 @@ video {
 }
 
 footer {
+    min-width: 1200px;
+    width: 98%;
     background-color: rgb(46, 125, 50);
     color: rgb(255, 255, 255);
-    a {
-        color: rgb(255, 255, 255);
-        text-decoration: none;
-    }
-    a:hover {
-        color: rgb(165, 214, 167);
-        text-decoration: underline;
-    }
+    padding: 10px;
+    margin: auto;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+}
+footer a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+footer a:hover {
+    color: rgb(165, 214, 167);
+    text-decoration: underline;
 }
 
 .pie-pagina {
